Kitty multiplexing, fonts + pywal + better readme

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -7,9 +7,9 @@
 #: characters.
 
 font_family      Iosevka Nerd Font
-bold_font        auto
-italic_font      auto
-bold_italic_font auto
+bold_font        Iosevka Bold Nerd Font Complete
+italic_font      Iosevka Italic Nerd Font Complete
+bold_italic_font Iosevka Bold Italic Nerd Font Complete
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
@@ -312,7 +312,7 @@ mouse_hide_wait 3.0
 #: much effort.
 
 url_color #0087bd
-url_style curly
+url_style straight
 
 #: The color and style for highlighting URLs on mouse-over. url_style
 #: can be one of: none, straight, double, curly, dotted, dashed.
@@ -609,7 +609,7 @@ sync_to_monitor yes
 
 #: Terminal bell {{{
 
-enable_audio_bell yes
+enable_audio_bell no
 
 #: The audio bell. Useful to disable it in environments that require
 #: silence.
@@ -844,7 +844,7 @@ tab_bar_margin_height 0.0 0.0
 #: The second number is the margin between the tab bar and the
 #: contents of the current tab.
 
-tab_bar_style fade
+tab_bar_style powerline
 
 #: The tab bar style, can be one of:
 
@@ -951,7 +951,7 @@ inactive_tab_font_style normal
 
 #: Tab bar colors and styles.
 
-tab_bar_background none
+tab_bar_background #ffff
 
 #: Background color for the tab bar. Defaults to using the terminal
 #: background color.
