--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -7,33 +7,33 @@
 # (windows with '_NET_WM_WINDOW_TYPE_DESKTOP') never get shadow, 
 # unless explicitly requested using the wintypes option.
 #
-# shadow = false
-shadow = false;
+# shadow = true
+shadow = true;
 
 # The blur radius for shadows, in pixels. (defaults to 12)
 # shadow-radius = 12
-shadow-radius = 7;
+shadow-radius = 12;
 
 # The opacity of shadows. (0.0 - 1.0, defaults to 0.75)
 # shadow-opacity = .75
 
 # The left offset for shadows, in pixels. (defaults to -15)
 # shadow-offset-x = -15
-shadow-offset-x = -7;
+shadow-offset-x = -10;
 
 # The top offset for shadows, in pixels. (defaults to -15)
 # shadow-offset-y = -15
-shadow-offset-y = -7;
+shadow-offset-y = -10;
 
 # Avoid drawing shadows on dock/panel windows. This option is deprecated,
 # you should use the *wintypes* option in your config file instead.
 #
-# no-dock-shadow = false
+# no-dock-shadow = true
 
 # Don't draw shadows on drag-and-drop windows. This option is deprecated, 
 # you should use the *wintypes* option in your config file instead.
 #
-# no-dnd-shadow = false
+# no-dnd-shadow = true
 
 # Red color value of shadow (0.0 - 1.0, defaults to 0).
 # shadow-red = 0
@@ -66,6 +66,7 @@ shadow-exclude = [
   "class_g = 'Conky'",
   "class_g ?= 'Notify-osd'",
   "class_g = 'Cairo-clock'",
+  "class_g = 'Polybar'",
   "_GTK_FRAME_EXTENTS@:c"
 ];
 
@@ -117,11 +118,11 @@ fade-out-step = 0.03;
 
 # Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
 # inactive-opacity = 1
-inactive-opacity = 0.8;
+inactive-opacity = 1.0;
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
 # frame-opacity = 1.0
-frame-opacity = 0.5;
+frame-opacity = 1.0;
 
 # Default opacity for dropdown menus and popup menus. (0.0 - 1.0, defaults to 1.0)
 # menu-opacity = 1.0
@@ -131,12 +132,12 @@ frame-opacity = 0.5;
 inactive-opacity-override = false;
 
 # Default opacity for active windows. (0.0 - 1.0, defaults to 1.0)
- active-opacity = 1.0;
+active-opacity = 1.0;
 
 # Dim inactive windows. (0.0 - 1.0, defaults to 0.0)
 # inactive-dim = 0.0
 
-# Specify a list of conditions of windows that should always be considered focused.
+## Specify a list of conditions of windows that should always be considered focused.
 # focus-exclude = []
 focus-exclude = [ "class_g = 'Cairo-clock'" ];
 
@@ -151,14 +152,18 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 #    opacity-rule = [ "80:class_g = 'URxvt'" ];
 #
 opacity-rule = [
-  "95:class_g ?= 'Alacritty' && focused",
-  "95:class_g ?= 'kitty' && focused",
-  "98:class_g = 'Rofi'",
-  "95:class_g = 'Thunar'",
-  "99:class_g = 'Google-chrome'",
-  "99:class_g = 'Firefox-esr'",
-  "99:class_g = 'Firefox'",
-  "99:class_g = 'burp-StartBurp'"
+  "95:class_g = 'Alacritty' && focused",
+  "80:class_g = 'Alacritty' && !focused",
+  "95:class_g = 'kitty' && focused",
+  "80:class_g = 'kitty' && !focused",
+  "95:class_g = 'qterminal' && focused",
+  "80:class_g = 'qterminal' && !focused",
+  "95:class_g = 'Rofi'",
+  "100:class_g = 'Thunar'",
+  "100:class_g = 'Google-chrome'",
+  "100:class_g = 'Firefox-esr'",
+  "100:class_g = 'Firefox'",
+  "100:class_g = 'burp-StartBurp'"
 ];
 
 
@@ -170,7 +175,7 @@ opacity-rule = [
 # Parameters for background blurring, see the *BLUR* section for more information.
 #blur-method = "dual_kawase";
 #blur-strength = 5;
-# blur-size = 12
+#blur-size = 12;
 #
 # blur-deviation = false
 
@@ -185,7 +190,7 @@ opacity-rule = [
 #    blur-background 
 # Bad in performance, with driver-dependent behavior. The name may change.
 #
-# blur-background-frame = false
+#blur-background-frame = false
 
 
 # Use fixed blur strength rather than adjusting according to window opacity.
@@ -218,7 +223,6 @@ blur-background-exclude = [
 # Specify the backend to use: `xrender`, `glx`, or `xr_glx_hybrid`.
 # `xrender` is the default one.
 #
-#backend = 'glx'
 #backend = "glx";
 backend = "xrender";
 
