Fixed key conflicts and picom update

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -259,7 +259,7 @@ detect-client-opacity = true;
 # try detecting this with X RandR extension.
 #
 # refresh-rate = 60
-refresh-rate = 0
+# refresh-rate = 0
 
 # Limit picom to repaint at most once every 1 / 'refresh_rate' second to 
 # boost performance. This should not be used with 
