Added default polybar theme script and theme fixes
Fixed transparent (trans) theme full screen and removed window titles

--- a/.config/polybar/trans/config.ini
+++ b/.config/polybar/trans/config.ini
@@ -52,7 +52,7 @@ separator-foreground = ${colors.disabled}
 font-0 = "Iosevka Nerd Font:size=13;3"
 font-1 = "Iosevka Nerd Font:size=22;5"
 
-modules-left = xworkspaces xwindow
+modules-left = xworkspaces
 modules-right = ethernet vpn target nm-launcher filesystem pulseaudio xkeyboard memory cpu wlan date
 
 cursor-click = pointer
@@ -63,7 +63,7 @@ enable-ipc = true
 ; tray-position = right
 
 ; wm-restack = generic
-; wm-restack = bspwm
+wm-restack = bspwm
 ; wm-restack = i3
 
 ; override-redirect = true
